[package]
name = "introspectable_derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["introspection", "introspectable"]
description = "Derive macro for Introspectable"
readme = "README.md"
homepage = "https://github.com/peperworx/introspectable"
repository = "https://github.com/peperworx/introspectable_derive"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = {version = "2.0.15", features = ["full"]}
